# analyze_service/internal/app/router.go
@@ -3,14 +3,10 @@ package app
 import (
 	"net/http"
 
-	"memory-book/internal/app/middleware/auth"
-	mwLogger "memory-book/internal/app/middleware/logger"
-	requestcontext "memory-book/internal/app/middleware/request_context"
-	ELKauth "memory-book/internal/handlers/ELK_auth"
-	adminuser "memory-book/internal/handlers/admin_user"
-	"memory-book/internal/handlers/authorize"
-	checkalive "memory-book/internal/handlers/check_alive"
-	"memory-book/internal/handlers/register"
+	mwLogger "analyze-service/internal/app/middleware/logger"
+	requestcontext "analyze-service/internal/app/middleware/request_context"
+	"analyze-service/internal/handlers/analyze"
+	checkalive "analyze-service/internal/handlers/check_alive"
 
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
@@ -42,28 +38,7 @@ func Routes(a *App) http.Handler {
 
 	router.Get("/api/v1/alive", checkalive.New(a.logger))
 
-	{ // service auth
-		router.Post("/api/v1/register", register.New(a.logger, a.storage))
-		router.Post("/api/v1/auth", authorize.New(a.logger, a.storage, a.cache))
-	}
-	{ //ELK auth
-		router.Get("/api/v1/elk-auth", ELKauth.ELKAuth(a.logger, a.cache))
-	}
-
-	router.Route("/api/v1", func(r chi.Router) {
-		r.Use(auth.New(a.logger, a.cache))
-
-		r.Get("/test", checkalive.New(a.logger))
-
-		router.Post("/api/v1/refresh", authorize.Refresh(a.logger, a.cache))
-
-	})
-
-	router.Route("/admin/api/v1", func(r chi.Router) {
-
-		r.Post("/user-create", adminuser.New(a.logger, a.storage))
-		r.Get("/test", checkalive.New(a.logger))
-	})
+	router.Post("/api/v1/analyze", analyze.Analyze(a.logger, a.moralisAPI))
 
 	router.Options("/*", func(w http.ResponseWriter, r *http.Request) {
 		w.Header().Set("Access-Control-Allow-Origin", "*")
